--- a/package.json
+++ b/package.json
@@ -1,11 +1,33 @@
 {
-  "name": "db_service",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "bdd-services-darylnyd",
+    "version": "1.0.0",
+    "description": "Database service for NydArt Advisor application",
+    "main": "src/server.js",
+    "scripts": {
+        "start": "node src/server.js",
+        "dev": "nodemon src/server.js",
+        "test": "node database.test.js",
+        "test:health": "node -e \"require('./database.test.js')\"",
+        "migrate": "node src/migrations/updateExistingUsers.js"
+    },
+    "keywords": [
+        "mongodb",
+        "database",
+        "art",
+        "analysis"
+    ],
+    "author": "DarylNyd",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^1.11.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.0.3",
+        "prom-client": "^15.1.3"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.22"
+    }
 }
