--- a/package.json
+++ b/package.json
@@ -16,7 +16,17 @@
         "test:file": "node src/test/run-tests.js --file",
         "test:legacy": "node database.test.js",
         "test:health": "node -e \"require('./database.test.js')\"",
-        "migrate": "node src/migrations/updateExistingUsers.js"
+        "migrate": "node src/migrations/updateExistingUsers.js",
+        "lint": "eslint src/ --ext .js",
+        "lint:fix": "eslint src/ --ext .js --fix",
+        "security:audit": "npm audit",
+        "security:fix": "npm audit fix",
+        "docker:build": "docker build -t nydart-advisor/db-service .",
+        "docker:run": "docker run -p 5001:5001 nydart-advisor/db-service",
+        "docker:push": "docker push nydart-advisor/db-service",
+        "ci:test": "npm run lint && npm run security:audit && npm run test:full",
+        "ci:build": "npm run ci:test && npm run docker:build",
+        "ci:deploy": "npm run ci:build && npm run docker:push"
     },
     "keywords": [
         "mongodb",
